Avoid stretching sized images

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -125,7 +125,7 @@ hr {
   border-top: 1px solid #f7f5f2;
 }
 
-img {
+img:not([width]):not([height]) {
   height: auto;
   width: 100%;
 }
